# lite-xl

./: CMakeLists.txt
chef/: litexl.yaml
cmake/modules/: FindLua.cmake  FindSDL2.cmake
src/: main.c
src/api/: dirmonitor.c  process.c  system.c
